page overflow bug Fixed

--- a/style.css
+++ b/style.css
@@ -330,7 +330,7 @@ a {
 @media only screen and (max-width: 768px) {
   .mobile-menu-self {
     z-index: 5;
-    display: block;
+    display: flex;
     position: absolute;
     width: 50vw;
     height: 100vh;
@@ -338,11 +338,10 @@ a {
     right: 0;
     background-color: rgb(250, 250, 250);
     opacity: 0;
-    display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    transform: translateX(100%);
+    transform: translateY(-100%);
     transition: 300ms all ease;
   }
 
@@ -352,6 +351,7 @@ a {
     gap: 10px;
   }
   .mobile-menu-self.active {
+    transition: 300ms all ease;
     opacity: 0.95;
     transform: translateX(0);
   }
